# onAI

./: .gitignore  Docker-compose.yml  Dockerfile  README.MD  get_callback.py  pyproject.toml
src/: config.py  consumer.py  database.py  models.py  openai.py  openai_service.py  producer.py  rabbit.py
tests/: test_consumer.py  test_db.py  test_openai.py  test_producer.py  test_rabbit.py
